--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartdatalabeldata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartdatalabeldata.yml
@@ -1,149 +1,146 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData:interface'
-    summary: 描述通过调用返回的数据的接口`chartDataLabel.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartDataLabelData
-    fullName: Excel.Interfaces.ChartDataLabelData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartDataLabelData#position:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelData#separator:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelData#showBubbleSize:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelData#showCategoryName:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelData#showLegendKey:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelData#showPercentage:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelData#showSeriesName:member'
-      - 'excel!Excel.Interfaces.ChartDataLabelData#showValue:member'
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#position:member'
-    summary: |-
-      表示数据标签的位置的 DataLabelPosition 值。 有关详细信息，请参阅 ChartDataLabelPosition。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartDataLabelData
+uid: excel!Excel.Interfaces.ChartDataLabelData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartDataLabelData
+summary: 描述通过调用返回的数据的接口 `chartDataLabel.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: position
+  uid: excel!Excel.Interfaces.ChartDataLabelData#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    表示数据标签的位置的 DataLabelPosition 值。 有关详细信息，请参阅 ChartDataLabelPosition。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: Excel.ChartDataLabelPosition | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartDataLabelData#position~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#separator:member'
-    summary: |-
-      该字符串表示用于图表中数据标签的分隔符。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: separator
-    fullName: separator
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'separator?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#showBubbleSize:member'
-    summary: |-
-      指定数据标签气泡大小是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: Excel.ChartDataLabelPosition | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout";'
+    return:
+      type: <xref uid="excel!Excel.ChartDataLabelPosition:enum" /> | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout"
+- name: separator
+  uid: excel!Excel.Interfaces.ChartDataLabelData#separator:member
+  package: excel!
+  fullName: separator
+  summary: >-
+    该字符串表示用于图表中数据标签的分隔符。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showBubbleSize
-    fullName: showBubbleSize
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showBubbleSize?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#showCategoryName:member'
-    summary: |-
-      指定数据标签类别名称是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showCategoryName
-    fullName: showCategoryName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showCategoryName?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#showLegendKey:member'
-    summary: |-
-      指定数据标签图例标示是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'separator?: string;'
+    return:
+      type: string
+- name: showBubbleSize
+  uid: excel!Excel.Interfaces.ChartDataLabelData#showBubbleSize:member
+  package: excel!
+  fullName: showBubbleSize
+  summary: >-
+    指定数据标签气泡大小是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showLegendKey
-    fullName: showLegendKey
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showLegendKey?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#showPercentage:member'
-    summary: |-
-      指定数据标签百分比是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showPercentage
-    fullName: showPercentage
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showPercentage?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#showSeriesName:member'
-    summary: |-
-      指定数据标签系列名称是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showBubbleSize?: boolean;'
+    return:
+      type: boolean
+- name: showCategoryName
+  uid: excel!Excel.Interfaces.ChartDataLabelData#showCategoryName:member
+  package: excel!
+  fullName: showCategoryName
+  summary: >-
+    指定数据标签类别名称是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showSeriesName
-    fullName: showSeriesName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showSeriesName?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#showValue:member'
-    summary: |-
-      指定数据标签值是否可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showValue
-    fullName: showValue
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showValue?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelData#position~0:complex'
-    name: Excel.ChartDataLabelPosition | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout"
-    fullName: Excel.ChartDataLabelPosition | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartDataLabelPosition:enum'
-        name: Excel.ChartDataLabelPosition
-        fullName: Excel.ChartDataLabelPosition
-      - name: ' | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout"'
-        fullName: ' | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout"'
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showCategoryName?: boolean;'
+    return:
+      type: boolean
+- name: showLegendKey
+  uid: excel!Excel.Interfaces.ChartDataLabelData#showLegendKey:member
+  package: excel!
+  fullName: showLegendKey
+  summary: >-
+    指定数据标签图例标示是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showLegendKey?: boolean;'
+    return:
+      type: boolean
+- name: showPercentage
+  uid: excel!Excel.Interfaces.ChartDataLabelData#showPercentage:member
+  package: excel!
+  fullName: showPercentage
+  summary: >-
+    指定数据标签百分比是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showPercentage?: boolean;'
+    return:
+      type: boolean
+- name: showSeriesName
+  uid: excel!Excel.Interfaces.ChartDataLabelData#showSeriesName:member
+  package: excel!
+  fullName: showSeriesName
+  summary: >-
+    指定数据标签系列名称是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showSeriesName?: boolean;'
+    return:
+      type: boolean
+- name: showValue
+  uid: excel!Excel.Interfaces.ChartDataLabelData#showValue:member
+  package: excel!
+  fullName: showValue
+  summary: >-
+    指定数据标签值是否可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showValue?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 75efb56dcbbf57fd519a23a8329d937572aa1d7b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49334119"
