--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendentrydata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendentrydata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartLegendEntryData:interface'
-    summary: 描述通过调用返回的数据的接口`chartLegendEntry.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartLegendEntryData
-    fullName: Excel.Interfaces.ChartLegendEntryData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartLegendEntryData#visible:member'
-  - uid: 'excel!Excel.Interfaces.ChartLegendEntryData#visible:member'
-    summary: |-
-      表示图表图例条目可见。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartLegendEntryData
+uid: excel!Excel.Interfaces.ChartLegendEntryData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartLegendEntryData
+summary: 描述通过调用返回的数据的接口 `chartLegendEntry.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: visible
+  uid: excel!Excel.Interfaces.ChartLegendEntryData#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    表示图表图例条目可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 38d4f16019fb6ea3f302b92e9bc85c24e1637265
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49334049"
