--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendentryloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendentryloadoptions.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions:interface'
-    summary: |-
-      表示 legendEntryCollection 中的 legendEntry。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartLegendEntryLoadOptions
+uid: excel!Excel.Interfaces.ChartLegendEntryLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartLegendEntryLoadOptions
+summary: >-
+  表示 legendEntryCollection 中的 legendEntry。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartLegendEntryLoadOptions
-    fullName: Excel.Interfaces.ChartLegendEntryLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
-  - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
-    summary: |-
-      表示图表图例条目可见。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartLegendEntryLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: visible
+  uid: excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    表示图表图例条目可见。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 7c43063afaa0909e086b94c89ee6ef14b9ce3f2f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49333986"
