--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartloadoptions.yml
@@ -1,282 +1,274 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions:interface'
-    summary: |-
-      表示工作簿中的 chart 对象。 若要了解有关 Chart 对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理图表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-charts)<!-- -->.
+### YamlMime:TSType
+name: Excel.Interfaces.ChartLoadOptions
+uid: excel!Excel.Interfaces.ChartLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartLoadOptions
+summary: >-
+  表示工作簿中的 chart 对象。 若要了解有关 Chart 对象模型的详细信息，请参阅 [使用 Excel JAVASCRIPT API 处理图表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-charts)<!-- -->.
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartLoadOptions
-    fullName: Excel.Interfaces.ChartLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#axes:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#chartType:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#dataLabels:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#format:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#height:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#left:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#legend:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#series:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#showAllFieldButtons:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#title:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
-      - 'excel!Excel.Interfaces.ChartLoadOptions#worksheet:member'
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#axes:member'
-    summary: |-
-      表示图表坐标轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: axes
-    fullName: axes
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'axes?: Excel.Interfaces.ChartAxesLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#chartType:member'
-    summary: |-
-      指定图表的类型。 有关详细信息，请参阅 ChartType。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: axes
+  uid: excel!Excel.Interfaces.ChartLoadOptions#axes:member
+  package: excel!
+  fullName: axes
+  summary: >-
+    表示图表坐标轴。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: chartType
-    fullName: chartType
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'chartType?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#dataLabels:member'
-    summary: |-
-      表示图表上的数据标签。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dataLabels
-    fullName: dataLabels
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#format:member'
-    summary: |-
-      封装图表区域的格式属性。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'axes?: Excel.Interfaces.ChartAxesLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxesLoadOptions:interface" />
+- name: chartType
+  uid: excel!Excel.Interfaces.ChartLoadOptions#chartType:member
+  package: excel!
+  fullName: chartType
+  summary: >-
+    指定图表的类型。 有关详细信息，请参阅 ChartType。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartAreaFormatLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#height:member'
-    summary: |-
-      指定 chart 对象的高度（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#id:member'
-    summary: |-
-      图表的唯一 ID。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'chartType?: boolean;'
+    return:
+      type: boolean
+- name: dataLabels
+  uid: excel!Excel.Interfaces.ChartLoadOptions#dataLabels:member
+  package: excel!
+  fullName: dataLabels
+  summary: >-
+    表示图表上的数据标签。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#left:member'
-    summary: |-
-      从图表左侧到工作表原点的距离，以磅值表示。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#legend:member'
-    summary: |-
-      表示图表的图例。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface" />
+- name: format
+  uid: excel!Excel.Interfaces.ChartLoadOptions#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    封装图表区域的格式属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: legend
-    fullName: legend
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'legend?: Excel.Interfaces.ChartLegendLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#name:member'
-    summary: |-
-      指定 chart 对象的名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#series:member'
-    summary: |-
-      表示单个系列或图表中的系列集合。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartAreaFormatLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface" />
+- name: height
+  uid: excel!Excel.Interfaces.ChartLoadOptions#height:member
+  package: excel!
+  fullName: height
+  summary: >-
+    指定 chart 对象的高度（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: series
-    fullName: series
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'series?: Excel.Interfaces.ChartSeriesCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#showAllFieldButtons:member'
-    summary: |-
-      指定是否在数据透视图上显示所有字段按钮。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showAllFieldButtons
-    fullName: showAllFieldButtons
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showAllFieldButtons?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#title:member'
-    summary: |-
-      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.ChartLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    图表的唯一 ID。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: title
-    fullName: title
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'title?: Excel.Interfaces.ChartTitleLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
-    summary: |-
-      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
-    summary: |-
-      指定 chart 对象的宽度（以磅为单位）。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: left
+  uid: excel!Excel.Interfaces.ChartLoadOptions#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    从图表左侧到工作表原点的距离，以磅值表示。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#worksheet:member'
-    summary: |-
-      包含当前 chart 的 worksheet 对象。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: worksheet
-    fullName: worksheet
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
-    name: Excel.Interfaces.ChartAxesLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
-    name: Excel.Interfaces.ChartDataLabelsLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
-    name: Excel.Interfaces.ChartAreaFormatLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
-    name: Excel.Interfaces.ChartLegendLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
-    name: Excel.Interfaces.ChartSeriesCollectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
-    name: Excel.Interfaces.ChartTitleLoadOptions
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
-    name: Excel.Interfaces.WorksheetLoadOptions
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: boolean;'
+    return:
+      type: boolean
+- name: legend
+  uid: excel!Excel.Interfaces.ChartLoadOptions#legend:member
+  package: excel!
+  fullName: legend
+  summary: >-
+    表示图表的图例。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'legend?: Excel.Interfaces.ChartLegendLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartLegendLoadOptions:interface" />
+- name: name
+  uid: excel!Excel.Interfaces.ChartLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    指定 chart 对象的名称。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: series
+  uid: excel!Excel.Interfaces.ChartLoadOptions#series:member
+  package: excel!
+  fullName: series
+  summary: >-
+    表示单个系列或图表中的系列集合。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'series?: Excel.Interfaces.ChartSeriesCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface" />
+- name: showAllFieldButtons
+  uid: excel!Excel.Interfaces.ChartLoadOptions#showAllFieldButtons:member
+  package: excel!
+  fullName: showAllFieldButtons
+  summary: >-
+    指定是否在数据透视图上显示所有字段按钮。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showAllFieldButtons?: boolean;'
+    return:
+      type: boolean
+- name: title
+  uid: excel!Excel.Interfaces.ChartLoadOptions#title:member
+  package: excel!
+  fullName: title
+  summary: >-
+    指定指定图表的标题，包括文本、可见性、位置和标题的格式。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'title?: Excel.Interfaces.ChartTitleLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTitleLoadOptions:interface" />
+- name: top
+  uid: excel!Excel.Interfaces.ChartLoadOptions#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    指定一个距离，以磅为单位，从工作表上的第1行顶部 (工作) 表上，或图表) 上的图表区 (顶部的距离（以磅为单位）。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: boolean;'
+    return:
+      type: boolean
+- name: width
+  uid: excel!Excel.Interfaces.ChartLoadOptions#width:member
+  package: excel!
+  fullName: width
+  summary: >-
+    指定 chart 对象的宽度（以磅为单位）。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+- name: worksheet
+  uid: excel!Excel.Interfaces.ChartLoadOptions#worksheet:member
+  package: excel!
+  fullName: worksheet
+  summary: >-
+    包含当前 chart 的 worksheet 对象。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.WorksheetLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 65d309ce826520600ff89c682e13dc7394a66603
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49333972"
