--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttitleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttitleloadoptions.yml
@@ -1,238 +1,242 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
-    summary: |-
-      表示图表的图表标题对象。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartTitleLoadOptions
+uid: excel!Excel.Interfaces.ChartTitleLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartTitleLoadOptions
+summary: >-
+  表示图表的图表标题对象。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartTitleLoadOptions
-    fullName: Excel.Interfaces.ChartTitleLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#format:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#height:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#horizontalAlignment:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#left:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#overlay:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#position:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#showShadow:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#text:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#textOrientation:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#top:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#verticalAlignment:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#visible:member'
-      - 'excel!Excel.Interfaces.ChartTitleLoadOptions#width:member'
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#format:member'
-    summary: |-
-      表示图表标题的格式，包括填充和字体格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartTitleFormatLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleFormatLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#height:member'
-    summary: |-
-      返回图表标题的高度，以磅为单位。 如果图表标题不可见，则为 Null。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    表示图表标题的格式，包括填充和字体格式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#horizontalAlignment:member'
-    summary: |-
-      指定图表标题的水平对齐方式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: horizontalAlignment
-    fullName: horizontalAlignment
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'horizontalAlignment?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#left:member'
-    summary: |-
-      指定图表标题的左边缘到图表区左边缘的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartTitleFormatLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTitleFormatLoadOptions:interface" />
+- name: height
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#height:member
+  package: excel!
+  fullName: height
+  summary: >-
+    返回图表标题的高度，以磅为单位。 如果图表标题不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#overlay:member'
-    summary: |-
-      指定图表标题是否将覆盖图表。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: overlay
-    fullName: overlay
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'overlay?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#position:member'
-    summary: |-
-      表示图表标题的位置。 有关详细信息，请参阅 ChartTitlePosition。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: boolean;'
+    return:
+      type: boolean
+- name: horizontalAlignment
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#horizontalAlignment:member
+  package: excel!
+  fullName: horizontalAlignment
+  summary: >-
+    指定图表标题的水平对齐方式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#showShadow:member'
-    summary: |-
-      表示一个布尔值，用于确定图表标题是否具有阴影。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showShadow
-    fullName: showShadow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showShadow?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#text:member'
-    summary: |-
-      指定图表的标题文本。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'horizontalAlignment?: boolean;'
+    return:
+      type: boolean
+- name: left
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    指定图表标题的左边缘到图表区左边缘的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: text
-    fullName: text
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'text?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#textOrientation:member'
-    summary: |-
-      指定文本面向图表标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: textOrientation
-    fullName: textOrientation
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'textOrientation?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#top:member'
-    summary: |-
-      指定图表标题的上边缘到图表区域顶部的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: boolean;'
+    return:
+      type: boolean
+- name: overlay
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#overlay:member
+  package: excel!
+  fullName: overlay
+  summary: >-
+    指定图表标题是否将覆盖图表。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#verticalAlignment:member'
-    summary: |-
-      指定图表标题的垂直对齐方式。 有关详细信息，请参阅 ChartTextVerticalAlignment。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: verticalAlignment
-    fullName: verticalAlignment
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'verticalAlignment?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#visible:member'
-    summary: |-
-      指定图表标题是否为 shape.visibile。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'overlay?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    表示图表标题的位置。 有关详细信息，请参阅 ChartTitlePosition。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions#width:member'
-    summary: |-
-      指定图表标题的宽度（以磅为单位）。 如果图表标题不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartTitleFormatLoadOptions:interface'
-    name: Excel.Interfaces.ChartTitleFormatLoadOptions
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: boolean;'
+    return:
+      type: boolean
+- name: showShadow
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#showShadow:member
+  package: excel!
+  fullName: showShadow
+  summary: >-
+    表示一个布尔值，用于确定图表标题是否具有阴影。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showShadow?: boolean;'
+    return:
+      type: boolean
+- name: text
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#text:member
+  package: excel!
+  fullName: text
+  summary: >-
+    指定图表的标题文本。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'text?: boolean;'
+    return:
+      type: boolean
+- name: textOrientation
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#textOrientation:member
+  package: excel!
+  fullName: textOrientation
+  summary: >-
+    指定文本面向图表标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'textOrientation?: boolean;'
+    return:
+      type: boolean
+- name: top
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    指定图表标题的上边缘到图表区域顶部的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: boolean;'
+    return:
+      type: boolean
+- name: verticalAlignment
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#verticalAlignment:member
+  package: excel!
+  fullName: verticalAlignment
+  summary: >-
+    指定图表标题的垂直对齐方式。 有关详细信息，请参阅 ChartTextVerticalAlignment。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'verticalAlignment?: boolean;'
+    return:
+      type: boolean
+- name: visible
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定图表标题是否为 shape.visibile。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+- name: width
+  uid: excel!Excel.Interfaces.ChartTitleLoadOptions#width:member
+  package: excel!
+  fullName: width
+  summary: >-
+    指定图表标题的宽度（以磅为单位）。 如果图表标题不可见，则为 Null。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: f37e86f8022eb242864e810ea6f9d8084bdbafa2
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49333818"
