--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttitleupdatedata.yml
@@ -1,217 +1,194 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
-    summary: '一个用于更新 ChartTitle 对象上的数据的接口，可用于`chartTitle.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartTitleUpdateData
-    fullName: Excel.Interfaces.ChartTitleUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#format:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#horizontalAlignment:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#left:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#overlay:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#position:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#showShadow:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#text:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#textOrientation:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#top:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#verticalAlignment:member'
-      - 'excel!Excel.Interfaces.ChartTitleUpdateData#visible:member'
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#format:member'
-    summary: |-
-      表示图表标题的格式，包括填充和字体格式。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartTitleUpdateData
+uid: excel!Excel.Interfaces.ChartTitleUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartTitleUpdateData
+summary: 一个用于更新 ChartTitle 对象上的数据的接口，可用于 `chartTitle.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: format
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    表示图表标题的格式，包括填充和字体格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartTitleFormatUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleFormatUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#horizontalAlignment:member'
-    summary: |-
-      指定图表标题的水平对齐方式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: horizontalAlignment
-    fullName: horizontalAlignment
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'horizontalAlignment?: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleUpdateData#horizontalAlignment~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#left:member'
-    summary: |-
-      指定图表标题的左边缘到图表区左边缘的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartTitleFormatUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTitleFormatUpdateData:interface" />
+- name: horizontalAlignment
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#horizontalAlignment:member
+  package: excel!
+  fullName: horizontalAlignment
+  summary: >-
+    指定图表标题的水平对齐方式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#overlay:member'
-    summary: |-
-      指定图表标题是否将覆盖图表。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: overlay
-    fullName: overlay
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'overlay?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#position:member'
-    summary: |-
-      表示图表标题的位置。 有关详细信息，请参阅 ChartTitlePosition。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'horizontalAlignment?: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed";'
+    return:
+      type: <xref uid="excel!Excel.ChartTextHorizontalAlignment:enum" /> | "Center" | "Left" | "Right" | "Justify" | "Distributed"
+- name: left
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    指定图表标题的左边缘到图表区左边缘的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: Excel.ChartTitlePosition | "Automatic" | "Top" | "Bottom" | "Left" | "Right";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleUpdateData#position~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#showShadow:member'
-    summary: |-
-      表示一个布尔值，用于确定图表标题是否具有阴影。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showShadow
-    fullName: showShadow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showShadow?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#text:member'
-    summary: |-
-      指定图表的标题文本。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: number;'
+    return:
+      type: number
+- name: overlay
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#overlay:member
+  package: excel!
+  fullName: overlay
+  summary: >-
+    指定图表标题是否将覆盖图表。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: text
-    fullName: text
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'text?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#textOrientation:member'
-    summary: |-
-      指定文本面向图表标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: textOrientation
-    fullName: textOrientation
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'textOrientation?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#top:member'
-    summary: |-
-      指定图表标题的上边缘到图表区域顶部的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'overlay?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    表示图表标题的位置。 有关详细信息，请参阅 ChartTitlePosition。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#verticalAlignment:member'
-    summary: |-
-      指定图表标题的垂直对齐方式。 有关详细信息，请参阅 ChartTextVerticalAlignment。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: verticalAlignment
-    fullName: verticalAlignment
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'verticalAlignment?: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleUpdateData#verticalAlignment~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#visible:member'
-    summary: |-
-      指定图表标题是否为 shape.visibile。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: Excel.ChartTitlePosition | "Automatic" | "Top" | "Bottom" | "Left" | "Right";'
+    return:
+      type: <xref uid="excel!Excel.ChartTitlePosition:enum" /> | "Automatic" | "Top" | "Bottom" | "Left" | "Right"
+- name: showShadow
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#showShadow:member
+  package: excel!
+  fullName: showShadow
+  summary: >-
+    表示一个布尔值，用于确定图表标题是否具有阴影。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartTitleFormatUpdateData:interface'
-    name: Excel.Interfaces.ChartTitleFormatUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#horizontalAlignment~0:complex'
-    name: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
-    fullName: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartTextHorizontalAlignment:enum'
-        name: Excel.ChartTextHorizontalAlignment
-        fullName: Excel.ChartTextHorizontalAlignment
-      - name: ' | "Center" | "Left" | "Right" | "Justify" | "Distributed"'
-        fullName: ' | "Center" | "Left" | "Right" | "Justify" | "Distributed"'
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#position~0:complex'
-    name: Excel.ChartTitlePosition | "Automatic" | "Top" | "Bottom" | "Left" | "Right"
-    fullName: Excel.ChartTitlePosition | "Automatic" | "Top" | "Bottom" | "Left" | "Right"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartTitlePosition:enum'
-        name: Excel.ChartTitlePosition
-        fullName: Excel.ChartTitlePosition
-      - name: ' | "Automatic" | "Top" | "Bottom" | "Left" | "Right"'
-        fullName: ' | "Automatic" | "Top" | "Bottom" | "Left" | "Right"'
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#verticalAlignment~0:complex'
-    name: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
-    fullName: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartTextVerticalAlignment:enum'
-        name: Excel.ChartTextVerticalAlignment
-        fullName: Excel.ChartTextVerticalAlignment
-      - name: ' | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"'
-        fullName: ' | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"'
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showShadow?: boolean;'
+    return:
+      type: boolean
+- name: text
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#text:member
+  package: excel!
+  fullName: text
+  summary: >-
+    指定图表的标题文本。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'text?: string;'
+    return:
+      type: string
+- name: textOrientation
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#textOrientation:member
+  package: excel!
+  fullName: textOrientation
+  summary: >-
+    指定文本面向图表标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'textOrientation?: number;'
+    return:
+      type: number
+- name: top
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    指定图表标题的上边缘到图表区域顶部的距离（以磅为单位）。 如果图表标题不可见，则为 Null。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: number;'
+    return:
+      type: number
+- name: verticalAlignment
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#verticalAlignment:member
+  package: excel!
+  fullName: verticalAlignment
+  summary: >-
+    指定图表标题的垂直对齐方式。 有关详细信息，请参阅 ChartTextVerticalAlignment。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'verticalAlignment?: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed";'
+    return:
+      type: <xref uid="excel!Excel.ChartTextVerticalAlignment:enum" /> | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
+- name: visible
+  uid: excel!Excel.Interfaces.ChartTitleUpdateData#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定图表标题是否为 shape.visibile。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 0f9d78c95afb60257142a72b3e5cde44de51d97d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49333790"
