--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttrendlinecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttrendlinecollectionloadoptions.yml
@@ -1,126 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions:interface'
-    summary: |-
-      表示图表趋势线的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartTrendlineCollectionLoadOptions
+uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartTrendlineCollectionLoadOptions
+summary: >-
+  表示图表趋势线的集合。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartTrendlineCollectionLoadOptions
-    fullName: Excel.Interfaces.ChartTrendlineCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#format:member'
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#intercept:member'
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#movingAveragePeriod:member'
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#polynomialOrder:member'
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#type:member'
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#format:member'
-    summary: |-
-      对于集合中的每一项：代表图表趋势线的格式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartTrendlineFormatLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTrendlineFormatLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#intercept:member'
-    summary: |-
-      对于集合中的每一项：代表趋势线的截距值。 可以设置为数字值或空字符串（对于自动值）。 返回的值始终为数字。
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    对于集合中的每一项：代表图表趋势线的格式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: intercept
-    fullName: intercept
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'intercept?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#movingAveragePeriod:member'
-    summary: |-
-      对于集合中的每一项：代表图表趋势线的周期。 仅适用于 MovingAverage 类型的趋势线。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: movingAveragePeriod
-    fullName: movingAveragePeriod
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'movingAveragePeriod?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#name:member'
-    summary: |-
-      对于集合中的每一项：代表趋势线的名称。 可设为字符串值，或者设为 Null 值（表示自动值）。 返回的值始终为字符串
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartTrendlineFormatLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTrendlineFormatLoadOptions:interface" />
+- name: intercept
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#intercept:member
+  package: excel!
+  fullName: intercept
+  summary: >-
+    对于集合中的每一项：代表趋势线的截距值。 可以设置为数字值或空字符串（对于自动值）。 返回的值始终为数字。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#polynomialOrder:member'
-    summary: |-
-      对于集合中的每一项：表示图表趋势线的顺序。 仅适用于具有多项式类型的趋势线。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: polynomialOrder
-    fullName: polynomialOrder
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'polynomialOrder?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#type:member'
-    summary: |-
-      对于集合中的每一项：代表图表趋势线的类型。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'intercept?: boolean;'
+    return:
+      type: boolean
+- name: movingAveragePeriod
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#movingAveragePeriod:member
+  package: excel!
+  fullName: movingAveragePeriod
+  summary: >-
+    对于集合中的每一项：代表图表趋势线的周期。 仅适用于 MovingAverage 类型的趋势线。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatLoadOptions:interface'
-    name: Excel.Interfaces.ChartTrendlineFormatLoadOptions
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'movingAveragePeriod?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对于集合中的每一项：代表趋势线的名称。 可设为字符串值，或者设为 Null 值（表示自动值）。 返回的值始终为字符串
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: polynomialOrder
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#polynomialOrder:member
+  package: excel!
+  fullName: polynomialOrder
+  summary: >-
+    对于集合中的每一项：表示图表趋势线的顺序。 仅适用于具有多项式类型的趋势线。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'polynomialOrder?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    对于集合中的每一项：代表图表趋势线的类型。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: ab5ecf75590587d3863c2ded541cb5bd57e87fab
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49333776"
